# esp32s3-usp-ip

./: .gitignore  CMakeLists.txt  README.md  main.c  sdkconfig  usb_host_driver.c  usbip_server.c  wifi_log_sink.c  wifi_manager.c
include/: usb_host_driver.h  usbip_server.h  wifi_log_sink.h  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild
